sections endpoints refactored
